# automaton2

./: .gitignore  CMakeLists.txt  README.md
include/: cell_env.h  element.h  grid.h  inputhandler.h  renderer.h  utils.h
src/: element.cpp  grid.cpp  inputhandler.cpp  main.cpp  renderer.cpp  utils.cpp
